# OKP-recognition

./: .gitignore  CMakeLists.txt  README.md  readme.md  requirements.txt
data/: CPU_utilization_(%)-2025_04_11_19_20_00-2025_04_16_17_50_00-UTC.csv  README.md  bct_component_okp.ipe  bct_decomposed.ipe  bct_tree.ipe  cubical.dot  edges_arrangements.ipe  generate_edge_crossings.py  graphs.g6  graphs.txt  new_graphs.txt  output.txt  readme.md  results_60.csv  results_600.csv  results_biconnected.csv  results_full_ilp.csv  results_sat.csv  results_sat_optimisations.csv  second.txt
data/latex/: bib.bib  ilp.tex  proposal.tex  sat.tex
data/thesis/: Thesis.tex  bachelor-thesis-template.tex  bibliography.bib
data/thesis/Chapters/: proposed_solution.tex
include/: abstract_solver.h  argument_parser.h  bcTree.h  bctree.h  bicomponent_solver.h  bicomponent_solver.hpp  bicomponents.h  dp_solver.h  graph.h  graphIO.h  ilp_solver.h  okp_recognition.h  okp_solver.h  process_graph.h  sat_solver.h  solver.h  solvers.h  timer.h
scripts/: generate_edge_crossings.py  render_visualisations.sh  run_experiment.py  vis.py  visualisation_methods.py  visualize_results.py
src/: argument_parser.cpp  bcTree.cpp  bctree.cpp  bicomponent_solver.cpp  bicomponents.cpp  check_results.py  dp_solver.cpp  graphIO.cpp  ilp.cpp  ilp_solver.cpp  main.cpp  okp_solver.cpp  process_graph.cpp  run_experiment.py  sat.cpp  sat_solver.cpp  visualize_output.py
thesis/: BachelorMasterThesis.cls  Thesis.tex  bibliography.bib
thesis/Chapters/: conclusions.tex  experiments_and_results.tex  introduction.tex  proposed_solution.tex  related_work.tex
thesis/Figures/: TODO.eps  bct_okp_config.ipe  k5_1planar.eps  k5_1planar.ipe  k5_outer2planar.eps  k5_outer2planar.ipe
thesis/Figures/edge_cross/: edges_arrangements.ipe  stuv.eps  stvu.eps  sutv.eps  suvt.eps  svtu.eps  svut.eps  tsuv.eps  tsvu.eps  tusv.eps  tuvs.eps  tvsu.eps  tvus.eps  ustv.eps  usvt.eps  utsv.eps  utvs.eps  uvst.eps  uvts.eps  vstu.eps  vsut.eps  vtsu.eps  vtus.eps  vust.eps  vuts.eps
thesis/Figures/experiments/: bctree_ilp.eps  bctree_okp.eps  bctree_sat.eps  ilp.eps  method_2.eps  method_3.eps  method_4.eps  method_5.eps  methods.eps  sat.eps
thesis/Figures/presentation/: drawing_sequence.ipe  index.ipe  main_idea.ipe  ordering_variables.ipe  step.ipe
